# Pulse

./: .gitattributes  .gitignore  Author-Assets.bat  Build-Pulse.ps1  Build.bat  CLAUDE.md  CMakeLists.txt  Package.bat  README.md  SEED_NOTES.md
assets/: CREDITS.txt  README.md
assets/audio/: CREDITS.txt  PULSE_enemy_sfx_producer_log.txt  PULSE_gunshot_producer_log.txt  PULSE_player_sfx_producer_log.txt  PULSE_reload_producer_log.txt
assets/bumstrum/fps_ak_animated/: edited.glb  license.txt  scene.gltf
assets/bumstrum/fps_animated_carbine/: license.txt  scene.gltf
assets/bumstrum/fps_pistol_animated/: license.txt
assets/bumstrum/fps_smg9_animated/: license.txt  scene.gltf
assets/bumstrum/shotgun_animated/: license.txt  scene.gltf
assets/bumstrum/sniper_animated/: license.txt  scene.gltf
assets/meshy/enemies/rigged_concepts/: pulse_enemy_001_enemy_rusher_low_triangular_lunge_predator_animated.glb  pulse_enemy_003_enemy_tank_broad_frontal_shield_brute_animated.glb  pulse_enemy_004_enemy_stalker_tall_flanking_pounce_hunter_animated.glb  pulse_enemy_005_enemy_drone_finned_hovering_sentinel_animated.glb  pulse_enemy_006_enemy_foundry_warden_heavy_mech_animated.glb  pulse_enemy_008_enemy_reliquary_choir_elite_animated.glb  pulse_enemy_009_enemy_fast_elite_rusher_speed_affix_animated.glb  pulse_enemy_011_enemy_volatile_elite_bruiser_pressure_reactor_animated.glb  pulse_enemy_012_enemy_regen_elite_stalker_self_repair_animated.glb  pulse_enemy_013_enemy_obsidian_skeletal_husk_benchmark_animated.glb  (+1 more)
assets/meshy/raw/: slice_cyan_crystal.glb  slice_gateway_arch.glb  slice_monument_obelisk.glb
assets/models/: pulse_enemy_ranged.mtl  pulse_enemy_rusher.mtl  pulse_enemy_tank.mtl
assets/models/rooms/: scifi_garage.mtl  scifi_room_a.mtl
assets/packs/pulse_environment/: README.md
assets/shaders/: bloom.hlsl  cluster_cull.hlsl  decal.hlsl  depthviz.hlsl  fog.hlsl  fxaa.hlsl  gbuffer.hlsl  gbufferviz.hlsl  mesh.hlsl  outline.hlsl  particle.hlsl  pt_reference.hlsl  resolve.hlsl  rt_denoise.hlsl  rt_trace.hlsl  shadow.hlsl  ssao.hlsl  ssgi.hlsl  ssr.hlsl  taa.hlsl  tonemap.hlsl  triangle.hlsl  ui.hlsl
assets/textures/: ceiling.ptex  cover.ptex  floor.ptex  wall.ptex
config/: pulse.content  pulse.rooms  pulse.style  pulse.tuning  pulse.weapons
docs/: AGENT_PLAYTEST_PROMPT.md  PROJECT_RULES.md  PROTOTYPE_SPEC.md  PULSE_ENEMY_AUDIO_SPEC.md  PULSE_GUNPLAY_SPEC.md  PULSE_MUSIC_SYSTEM.md  PULSE_PLAYER_AUDIO_SPEC.md  PULSE_SFX_CONFORM.md  PULSE_art_style_decision.md  Plan — PULSE engine and assets.txt  Plan_PULSE_engine_and_assets.txt  Plan_PULSE_neon_ink_brutalism.md  Plan_PULSE_real_deal.md  Plan_PULSE_roguelike_structure.md  Plan_PULSE_roguelite.md  QUATERNIUS_ASSET_CATALOG.md
src/: main.cpp  pulse.rc.in
src/Engine/: Audio.cpp  Audio.hpp  Config.cpp  Config.hpp  Engine.cpp  Engine.hpp  Input.hpp  Math.hpp  SceneFrame.hpp  StbVorbisImpl.cpp
src/Engine/Core/: AnimatedGltf.cpp  AnimatedGltf.hpp  CgltfImpl.cpp  CrashHandler.cpp  CrashHandler.hpp  Image.cpp  Image.hpp  ImageFile.cpp  ImageFile.hpp  Log.hpp  Mat.hpp  MeshFile.cpp  MeshFile.hpp  Paths.hpp
src/Engine/RHI/: Accel.cpp  Accel.hpp  AgilitySDK.hpp  Commands.cpp  Commands.hpp  D3D12Common.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Heaps.cpp  Heaps.hpp  Pipeline.cpp  Pipeline.hpp  Readback.cpp  Readback.hpp  Resource.cpp  Resource.hpp  Swapchain.cpp  Swapchain.hpp  Uploader.cpp  Uploader.hpp
src/Engine/RenderGraph/: RenderGraph.cpp  RenderGraph.hpp
src/Engine/Shaders/: ShaderCompiler.cpp  ShaderCompiler.hpp
src/Engine/UI/: Color.hpp  Font.cpp  Font.hpp  UiDrawList.cpp  UiDrawList.hpp
src/Game/: Build.cpp  Build.hpp  Meta.cpp  Meta.hpp  Pulse.cpp  Pulse.hpp  PulseGame.cpp  PulseGame.hpp  Run.cpp  Run.hpp  RunMods.cpp  RunMods.hpp  Settings.cpp  Settings.hpp  Status.cpp  Status.hpp  Tunables.hpp  Wasteland.cpp  Wasteland.hpp  WeaponProfile.cpp  WeaponProfile.hpp
src/Platform/: Window.cpp  Window.hpp
tools/: Provision-ThirdParty.bat  audit_environment_assets.py  audit_kit_coverage.py  author_world_textures.py  gen_ambient.py  gen_rooms.py
tools/assets/: Sync-PulseEnvironmentAssets.ps1
tools/assets/glb-bake/: bake.mjs
tools/audio/: pulse_audio_validate.py  pulse_conform_producer.py  pulse_enemy_sfx_producer.py  pulse_gunshot_producer.py  pulse_music_producer.py  pulse_music_report.py  pulse_music_trace.py  pulse_music_validate.py  pulse_player_sfx_producer.py  pulse_reload_producer.py
tools/blender/: batch_inspect.py  build_amethyst_core_pack.py  build_bumstrum_viewmodels.py  build_pulse_enemies.py  build_pulse_weapon.py  export_viewmodel.py  export_weapon.py  import_mixamo_enemy_packs.py  inspect_render.py  open_fps_workbench.bat  open_weapon_editor.bat  produce_enemies.py  render_pulse_weapon_inspection.py  retarget_test.py  rig_pulse_enemy_concepts.py  setup_fps_workbench.py  setup_weapon_editor.py  to_mixamo_fbx.py
tools/dev/: CubeScene.hpp  DemoScene.hpp  build_viewmodel.py  check_anim.py  dump_bones.py  dump_ik.py  engine_smoke.cpp  extract_tiles.py  inspect_ak.py  inspect_blend.py  inspect_tileset.py  inspect_viewmodel_axes.py  kit_inventory.py  montage_kit.py  prep_tileset.py  pulse_window.cpp  render_arms_framed.py  render_clusters.py  render_kit_thumbs.py  render_new_assets.py  render_preview.py  render_tiles.py  segment_bumstrum_anims.py  sketchfab_download.py  sketchfab_info.py  sketchfab_search.py  split_env_door.py  start_blender_mcp.py  wasteland_preview.cpp
tools/meshy/: README.md  fbx_probe.py  fix_feet.py  fix_feet2.py  fix_feet_rig.py  gen_obsidian_energy.py  gen_obsidian_pbr.py  inspect_rig.py  merge_kaykit.py  merge_mixamo_anims.py  merge_weapon.py  meshy.bat  meshy_gen.ps1  meshy_image_to_3d_batch.ps1  prep_for_mixamo.py  render_clips.py  render_glb.py  render_neon_eyes.py  render_textured.py  render_views.py  unpack_glb.py  verify_fbx.py
tools/reaper/: pulse_build_reaper_project.lua  pulse_generate_adaptive_music.lua  pulse_probe_reasynth.lua  pulse_reaper_smoke.lua  render_pulse_music_headless.ps1
tools/spike/: gpu_info_spike.cpp
(+306 files in other folders)
